# simplicialcubature

./: .gitignore  README.md  simplicialcubature.cabal  stack.yaml
src/: Common.hs  Cubature.hs  Cubature2.hs  Cubature3.hs  Cubature4.hs  Internal.hs  Internal2.hs  Internal3.hs  Internal4.hs  Simplex.hs  SimplexCubature.hs  SphericalSimplexCubature.hs
src-dll/: Export.hs
src-exe/: Main.hs
src/SimplexCubature/: Examples.hs  Internal.hs
src/SphericalSimplexCubature/: Examples.hs  Internal.hs  InternalVector.hs
